fixed text and image alignment on error404 page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,11 +3,25 @@ h1, h2 {
     color: cornflowerblue;
   }
   
-p, .author-creds {
+p {
   text-align: center;
 }
 
 img {
     width: 300px;  
     height: 300px;  
+}
+
+
+.author-creds {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.centeredImage {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
 }
